fix: Ajuste de funcionalidades da classe Agenda e horarios